# transcribe

./: .gitignore  README.md  __init__.py  __main__.py  gpt.py  openai.py  pyproject.toml  setup.py  transcribe.py  utils.py  whisper.py
notebooks/: pipeline.ipynb  youtube_to_transcript.ipynb
src/: pipeline.ipynb
src/accuratetranscribe/: __init__.py  __main__.py  audio.py  datastructures.py  file.py  gpt.py  openai.py  text.py  utils.py  whisper.py
src/precisetranscribe/: __init__.py  audio.py  file.py  text.py  utils.py  whisper.py
src/precisetranscribe/data/: prompt.txt
src/transcribe/: __init__.py  openai.py  utils.py
src/transcribe_aeronjl/: __main__.py  gpt.py  utils.py
tests/: test_utils.py
